--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-  <title>vis</title>
+  <title>5101 Virginia</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
@@ -25,10 +25,24 @@
 
   <div id="container" class="container">
     <header>
-
+      <div class="navbar">
+        <div class="navbar-inner">
+          <a class="brand" href="/">5101 Virginia</a>
+          <ul class="nav">
+            <li class="active"><a href="/">The Home</a></li>
+            <li><a href="/features.html">Features</a></li>
+            <li><a href="/neighborhood.html">The Neighborhood</a></li>
+          </ul>
+        </div>
+      </div>
     </header>
     <div id="main" role="main">
-      <div id="vis"></div>
+      <div class="row">
+        <div class="span12">
+          <h2 class='center'>Get ready to enjoy <strong>3,600 square feet</strong> of <i>luxury</i></h2>
+          <img src="/img/house-front2.jpg" class="img-rounded"/>
+        </div>
+      </div>
     </div>
     <footer>
 
@@ -45,7 +59,6 @@
   <script src="js/libs/coffee-script.js"></script>
   <script src="js/libs/d3.v3.js"></script>
   <script src="js/libs/queue.min.js"></script>
-  <script type="text/coffeescript" src="coffee/vis.coffee"></script>
   <script type="text/javascript">
     $(document).ready(function() {
     });
