--- a/index.html
+++ b/index.html
@@ -39,8 +39,35 @@
     <div id="main" role="main">
       <div class="row">
         <div class="span12">
-          <h2 class='center'>Get ready to enjoy <strong>3,600 square feet</strong> of <i>luxury</i></h2>
+          <h2 class='center'>Get ready to enjoy <strong>3,600 square feet</strong> of <i>Luxury</i></h2>
           <img src="/img/house-front2.jpg" class="img-rounded"/>
+        </div>
+      </div>
+      <br/><br/>
+      <div class="row">
+        <h2>Explore 5101 Virginia</h2>
+        <div class="span12">
+          <p>With 3 stories, a double lot, and plenty of living space, you are sure to feel right at home the minute you walk in the door.</p>
+          <p>Explore what this home has to offer by clicking on each room below.</p>
+        </div>
+        <div class="row">
+          <div class="span12">
+            <div class="blueprint" id="first_floor_outer">
+              <img src="img/first_floor.png"/>
+              <a href="img/reading_nook.jpeg" id="reading_nook" class="mapicon preview" title="Nice Reading Nook in Living Room" style="left:260px;top:460px;"></a>
+              <a href="img/dining_room.jpg" id="dining" class="mapicon preview" title="Large Dining Room for Families or Parties" style="right:140px;top:400px;"></a>
+              <a href="img/porch.jpg" id="dining" class="mapicon preview" title="Backyard Grilling on this Huge Porch" style="left:40px;top:400px;"></a>
+            </div>
+            <div class="blueprint" id="second_floor_outer">
+              <img src="img/second_floor.png"/>
+              <a href="img/office.jpg" id="office" class="mapicon preview" title="Huge Room Makes a Great Bedroom or Office" style="left:140px;top:460px;"></a>
+            </div>
+            <div class="blueprint" id="third_floor_outer">
+              <img src="img/third_floor.png"/>
+              <a href="img/thirdfloor.jpg" id="thirdfloor" class="mapicon preview" title="Master Suite on the Third Floor" style="right:140px;top:360px;"></a>
+            </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
@@ -60,7 +87,15 @@
   <script src="js/libs/d3.v3.js"></script>
   <script src="js/libs/queue.min.js"></script>
   <script type="text/javascript">
+    
     $(document).ready(function() {
+        imagePreview();
+
+    /*     $('.mapicon').on('mouseover', function(e) { */
+    /*       var icon = $(this); */
+    /*       console.log(icon.attr('id')); */
+    /*       console.log(e); */
+    /*       }); */
     });
   </script>
 
