--- a/neighborhood.html
+++ b/neighborhood.html
@@ -50,6 +50,18 @@
           <p>
             Nestled between <a href="http://www.umkc.edu/">UMKC</a> and <a href="http://www.rockhurst.edu/">Rockhurst</a> Universities, the neighborhood has a vibrant and active feel.
           </p>
+
+          <p>The neighborhood - <strong>Troostwood</strong> - is the perfect mix of young college students and growing families. There is a strong sense of community here. From the yearly popular block party, to the frequent get-togethers, it is very easy to get to know the neighbors! </p>
+          <h3>Centrally Located</h3>
+          <p>You are just minutes from many of the best places to explore in Kansas City:</p>
+          <ul>
+            <li>The Plaza</li>
+            <li>The Nelson Atkins Museum of Art</li>
+            <li>Loose Park</li>
+            <li>Brookside</li>
+          </ul>
+          <p>Plus, with easy access to the US-71 highway, you have direct access to the downtown and river market areas, as well as southern Kansas City.</p>
+          <p>This location is literally at the heart of Kansas City</p>
         </div>
       </div>
     </div>
