--- a/index.html
+++ b/index.html
@@ -48,33 +48,62 @@
         <h2>Explore 5101 Virginia</h2>
         <div class="span12">
           <p>With 3 stories, a double lot, and plenty of living space, you are sure to feel right at home the minute you walk in the door.</p>
-          <p>Explore what this home has to offer by clicking on each room below.</p>
         </div>
         <div class="row">
-          <div class="span12">
-            <div class="blueprint" id="first_floor_outer">
-              <img src="img/first_floor.png"/>
-              <a href="img/reading_nook.jpeg" id="reading_nook" class="mapicon preview" title="Nice Reading Nook in Living Room" style="left:260px;top:460px;"></a>
-              <a href="img/dining_room.jpg" id="dining" class="mapicon preview" title="Large Dining Room for Families or Parties" style="right:140px;top:400px;"></a>
-              <a href="img/porch.jpg" id="dining" class="mapicon preview" title="Backyard Grilling on this Huge Porch" style="left:40px;top:400px;"></a>
-            </div>
-            <div class="blueprint" id="second_floor_outer">
-              <img src="img/second_floor.png"/>
-              <a href="img/office.jpg" id="office" class="mapicon preview" title="Huge Room Makes a Great Bedroom or Office" style="left:140px;top:460px;"></a>
-            </div>
-            <div class="blueprint" id="third_floor_outer">
-              <img src="img/third_floor.png"/>
-              <a href="img/thirdfloor.jpg" id="thirdfloor" class="mapicon preview" title="Master Suite on the Third Floor" style="right:140px;top:360px;"></a>
-            </div>
+          <ul id="tabber" class="nav nav-tabs">
+            <li class="active">
+              <a href="#floorplan">Floorplan</a>
+            </li>
+            <li><a href="#pics">Pictures</a></li>
+          </ul>
+          <div class="tab-content">
+          <div class="tab-pane active" id="floorplan">
+            <div class="span12">
+              <div class="blueprint" id="first_floor_outer">
+                <img src="img/first_floor.png"/>
+                <a href="img/reading_nook.jpeg" id="reading_nook" class="mapicon preview" title="Nice Reading Nook in Living Room" style="left:260px;top:460px;"></a>
+                <a href="img/dining_room.jpg" id="dining" class="mapicon preview" title="Large Dining Room for Families or Parties" style="right:140px;top:400px;"></a>
+                <a href="img/porch.jpg" id="dining" class="mapicon preview" title="Backyard Grilling on this Huge Porch" style="left:40px;top:400px;"></a>
+              </div>
+              <div class="blueprint" id="second_floor_outer">
+                <img src="img/second_floor.png"/>
+                <a href="img/office.jpg" id="office" class="mapicon preview" title="Huge Room Makes a Great Bedroom or Office" style="left:140px;top:460px;"></a>
+              </div>
+              <div class="blueprint" id="third_floor_outer">
+                <img src="img/third_floor.png"/>
+                <a href="img/thirdfloor.jpg" id="thirdfloor" class="mapicon preview" title="Master Suite on the Third Floor" style="right:140px;top:360px;"></a>
+              </div>
+            </div> <!-- span12 -->
+          </div> <!-- floorplan -->
+          <div id="pics" class="tab-pane">
+            <div class="span12">
+              <h2>First Floor</h2>
+              <h3>Living Room</h3>
+              <img src="img/reading_nook.jpeg"/>
+              <br/><br/>
+              <h3>Dining Room</h3>
+              <img src="img/dining_room.jpg"/>
+              <h3>Back Porch</h3>
+              <img src="img/porch.jpg"/>
+              <h2>Second Floor</h2>
+              <h3>Bedroom or Office</h3>
+              <img src="img/office.jpg"/>
+              <h2>Third Floor</h2>
+              <h3>Bedroom</h3>
+              <img src="img/thirdfloor.jpg"/>
+
+              <br/><br/>
             </div>
           </div>
-        </div>
-      </div>
-    </div>
-    <footer>
+        </div> <!-- tab-content -->
+        </div> <!-- row -->
+      </div> <!-- row -->
+    </div> <!-- main -->
+  </div> <!-- container -->
+  <footer>
 
-    </footer>
-  </div> <!--! end of #container -->
+  </footer>
+</div> <!--! end of #container -->
 
 
   <!-- <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script> -->
@@ -83,6 +112,7 @@
 
   <script defer src="js/plugins.js"></script>
   <script defer src="js/script.js"></script>
+  <script src="js/libs/bootstrap.min.js"></script>
   <script src="js/libs/coffee-script.js"></script>
   <script src="js/libs/d3.v3.js"></script>
   <script src="js/libs/queue.min.js"></script>
@@ -90,6 +120,12 @@
     
     $(document).ready(function() {
         imagePreview();
+
+        $('#tabber a').click(function (e) {
+          e.preventDefault();
+          /* $('#tabber a:last').tab('show'); */
+          $(this).tab('show');
+          })
 
     /*     $('.mapicon').on('mouseover', function(e) { */
     /*       var icon = $(this); */
