--- a/index.html
+++ b/index.html
@@ -79,18 +79,18 @@
             <div class="span12">
               <h2>First Floor</h2>
               <h3>Living Room</h3>
-              <img src="img/reading_nook.jpeg"/>
+              <img src="img/reading_nook.jpeg" class="img-rounded"/>
               <br/><br/>
               <h3>Dining Room</h3>
-              <img src="img/dining_room.jpg"/>
+              <img src="img/dining_room.jpg" class="img-rounded"/>
               <h3>Back Porch</h3>
-              <img src="img/porch.jpg"/>
+              <img src="img/porch.jpg" class="img-rounded"/>
               <h2>Second Floor</h2>
               <h3>Bedroom or Office</h3>
-              <img src="img/office.jpg"/>
+              <img src="img/office.jpg" class="img-rounded"/>
               <h2>Third Floor</h2>
               <h3>Bedroom</h3>
-              <img src="img/thirdfloor.jpg"/>
+              <img src="img/thirdfloor.jpg" class="img-rounded"/>
 
               <br/><br/>
             </div>
