--- a/index.html
+++ b/index.html
@@ -81,6 +81,8 @@
               <h2>First Floor</h2>
               <h3>Living Room</h3>
               <img src="img/reading_nook.jpeg" class="img-rounded"/>
+              <h3>Kitchen</h3>
+              <img src="img/kitchen.jpg" class="img-rounded"/>
               <br/><br/>
               <h3>Dining Room</h3>
               <img src="img/dining_room.jpg" class="img-rounded"/>
