--- a/index.html
+++ b/index.html
@@ -69,6 +69,10 @@
               <div class="blueprint" id="second_floor_outer">
                 <img src="img/second_floor.png"/>
                 <a href="img/office.jpg" id="office" class="mapicon preview" title="Huge Room Makes a Great Bedroom or Office" style="left:140px;top:460px;"></a>
+                <a href="img/bathroom2.jpg" id="bathroom" class="mapicon preview" title="Full Bath with Roomy Shower and Separate Tub" style="right:280px;top:360px;"></a>
+                <a href="img/bedroom2.jpg" id="bedroom2" class="mapicon preview" title="Great Bedroom with Built-in Storage" style="right:280px;top:480px;"></a>
+                <a href="img/bedroom3.jpg" id="bedroom3" class="mapicon preview" title="Large Master Bedroom on Second Floor" style="right:280px;top:480px;"></a>
+                <a href="img/bedroom4.jpg" id="bedroom4" class="mapicon preview" title="Bright Bedroom is a Great Nursery Option" style="right:280px;top:230px;"></a>
               </div>
               <div class="blueprint" id="third_floor_outer">
                 <img src="img/third_floor.png"/>
@@ -91,6 +95,14 @@
               <h2>Second Floor</h2>
               <h3>Bedroom or Office</h3>
               <img src="img/office.jpg" class="img-rounded"/>
+              <h3>Bedroom #2</h3>
+              <img src="img/bedroom2.jpg" class="img-rounded"/>
+              <h3>Master Bedroom</h3>
+              <img src="img/bedroom3.jpg" class="img-rounded"/>
+              <h3>Bedroom #4</h3>
+              <img src="img/bedroom4.jpg" class="img-rounded"/>
+              <h3>Bathroom</h3>
+              <img src="img/bathroom2.jpg" class="img-rounded"/>
               <h2>Third Floor</h2>
               <h3>Bedroom</h3>
               <img src="img/thirdfloor.jpg" class="img-rounded"/>
