--- a/neighborhood.html
+++ b/neighborhood.html
@@ -62,6 +62,8 @@
           </ul>
           <p>Plus, with easy access to the US-71 highway, you have direct access to the downtown and river market areas, as well as southern Kansas City.</p>
           <p>This location is literally at the heart of Kansas City</p>
+          <h3>Explore</h3>
+          <p>Check out <a href="https://maps.google.com/maps/ms?msid=201551974048927172657.0004e1defb0958ecbe816&msa=0&ll=39.038186,-94.577479&spn=0.019367,0.038474">This Map of the area</a> to see more of what is around to explore and enjoy.</p>
         </div>
       </div>
     </div>
