update dining room

--- a/features.html
+++ b/features.html
@@ -48,9 +48,11 @@
             <li>Large, spacious floor plan</li> 
             <li>Beautiful hard wood floors</li>
             <li>Dual HVAC system - with systems for both the first floor and upstairs</li>
-            <li>2 car detached garage - with additional parking spot underneath the house</li>
+            <li>Blown-in Insulation in the walls help to make this house energy efficient</li>
+            <li>2 car detached garage - with an additional parking spot underneath the house</li>
             <li>Double lot with 2 fenced-in yards. Plenty of space for gardening or garden parties!</li>
             <li>Large basement (unfinished) for storage</li>
+            <li>Built in 1922 - and lovingly maintained and updated over the years</li>
           </ul>
         </div>
       </div>
