update with more pics

--- a/index.html
+++ b/index.html
@@ -64,7 +64,9 @@
                 <a href="img/reading_nook.jpeg" id="reading_nook" class="mapicon preview" title="Nice Reading Nook in Living Room" style="left:260px;top:460px;"></a>
                 <a href="img/dining_room.jpg" id="dining" class="mapicon preview" title="Large Dining Room for Families or Parties" style="right:320px;top:460px;"></a>
                 <a href="img/porch.jpg" id="dining" class="mapicon preview" title="Backyard Grilling on this Huge Porch" style="left:40px;top:400px;"></a>
-                <a href="img/kitchen.jpg" id="kitchen" class="mapicon preview" title="Huge Kitchen with Island for Cooking and Hanging Out" style="right:270px;top:200px;"></a>
+                <a href="img/kitchen.jpg" id="kitchen" class="mapicon preview" title="Huge Kitchen with Island for Cooking and Hanging Out" style="right:250px;top:320px;"></a>
+                <a href="img/front_door.jpg" id="door" class="mapicon preview" title="Beautiful Original Glasswork on First Floor" style="right:400px;top:580px;"></a>
+                <a href="img/bannister.jpg" id="stairs" class="mapicon preview" title="Check Out That Bannister!" style="right:400px;top:280px;"></a>
               </div>
               <div class="blueprint" id="second_floor_outer">
                 <img src="img/second_floor.png"/>
