--- a/index.html
+++ b/index.html
@@ -85,13 +85,18 @@
           <div id="pics" class="tab-pane">
             <div class="span12">
               <h2>First Floor</h2>
+              <h3>Entrance</h3>
+              <img src="img/front_door.jpg" class="img-rounded"/><br/><br/>
+              <img src="img/bannister.jpg" class="img-rounded"/>
               <h3>Living Room</h3>
               <img src="img/reading_nook.jpeg" class="img-rounded"/>
               <h3>Kitchen</h3>
               <img src="img/kitchen.jpg" class="img-rounded"/>
               <br/><br/>
               <h3>Dining Room</h3>
-              <img src="img/dining_room.jpg" class="img-rounded"/>
+              <img src="img/dining_room.jpg" class="img-rounded"/><br/><br/>
+              <img src="img/dining_light.jpg" class="img-rounded"/><br/><br/>
+              <img src="img/dining_window.jpg" class="img-rounded"/>
               <h3>Back Porch</h3>
               <img src="img/porch.jpg" class="img-rounded"/>
               <h2>Second Floor</h2>
