--- a/features.html
+++ b/features.html
@@ -45,14 +45,22 @@
             <li>3,600 square feet of living space</li>
             <li>6 bedrooms</li>
             <li>2 and 1/2 baths</li>
-            <li>Large, spacious floor plan</li> 
-            <li>Beautiful hard wood floors</li>
-            <li>Dual HVAC system - with systems for both the first floor and upstairs</li>
-            <li>Blown-in Insulation in the walls help to make this house energy efficient</li>
+            <li>Formal dining room</li>
+            <li>Huge pantry &amp; breakfast bar in kitchen</li>
+            <li>Large, spacious floor plan with oversized rooms and walk-in closets</li> 
+            <li>Beautiful hardwood floors</li>
+            <li>9 foot ceilings on first and second floors</li>
+            <li>High capacity, dual HVAC system - with systems for both the first floor and upstairs</li>
+            <li>Blown-in Insulation in the walls &amp; attic - helps to make this house energy efficient</li>
             <li>2 car detached garage - with an additional parking spot underneath the house</li>
-            <li>Double lot with 2 fenced-in yards. Plenty of space for gardening or garden parties!</li>
+            <li>Double lot with 2 fenced in yards. Plenty of space for gardening or garden parties!</li>
+            <li>2 working fireplaces</li>
             <li>Large basement (unfinished) for storage</li>
             <li>Built in 1922 - and lovingly maintained and updated over the years</li>
+            <li>Original Antique lighting fixtures</li>
+            <li>Built-in Bookshelves and storage</li>
+            <li>Ceiling fans in many of the rooms</li>
+            <li>Very attractive tile roof</li>
           </ul>
         </div>
       </div>
