--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
           <p>With 3 stories, a double lot, and plenty of living space, you are sure to feel right at home the minute you walk in the door.</p>
           <p>Contact info:<br/>Jim Vallandingham<br/>913-515-5744<br/><a href="mailto:&#118;&#108;&#097;&#110;&#100;&#104;&#097;&#109;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;">&#118;&#108;&#097;&#110;&#100;&#104;&#097;&#109;&#064;&#103;&#109;&#097;&#105;&#108;&#046;&#099;&#111;&#109;</a>
           </p>
+
+          <p>Asking: $230,000</p>
         </div>
         <div class="row">
           <ul id="tabber" class="nav nav-tabs">
