--- a/features.html
+++ b/features.html
@@ -60,7 +60,7 @@
             <li>Original Antique lighting fixtures</li>
             <li>Built-in Bookshelves and storage</li>
             <li>Ceiling fans in many of the rooms</li>
-            <li>Very attractive tile roof</li>
+            <li>Very attractive clay tile roof</li>
           </ul>
         </div>
       </div>
