--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <div class="row">
         <div class="span12">
           <h2 class='center'>Get ready to enjoy <strong>3,600 square feet</strong> of <i>Luxury</i></h2>
-          <img src="/img/house-front2.jpg" class="img-rounded"/>
+          <img src="/img/top.jpg" class="img-rounded"/>
         </div>
       </div>
       <br/><br/>
