add another top

--- a/features.html
+++ b/features.html
@@ -38,8 +38,13 @@
     </header>
     <div id="main" role="main">
       <div class="row">
-        <h2>Features</h2>
         <div class="span12">
+          <img src="/img/top2.jpg" class="img-rounded"/>
+        </div>
+      </div>
+      <div class="row">
+        <div class="span12">
+        <h2>Features</h2>
           <p>Here are just some of the features and amenities this home has to offer:</p>
           <ul style="font-size:120%">
             <li>3,600 square feet of living space</li>
@@ -62,6 +67,11 @@
             <li>Ceiling fans in many of the rooms</li>
             <li>Very attractive clay tile roof</li>
           </ul>
+          <h2>Google Fiber</h2>
+          <p>This house is part of the <a href="https://fiber.google.com/cities/kcmo/#header=check&fiberhood=knssmosclf03">Eastern 49-63</a> Fiberhood</p>
+          <p>You will move in just in time to experience Googlefiber - which promises to be <a href="https://fiber.google.com/about/">100 times faster</a> then any internet connection you have ever experienced.</p>
+          <p></p>
+          <br/><br/>
         </div>
       </div>
     </div>
